Style the number inputs

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="icon" href="./img/devchallenges.png" />
 
     <title>Checkout</title>
+    <!-- material icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="dist/style.css">
@@ -32,9 +36,9 @@
               </div>
               <!-- number input with buttons -->
               <div class="item__count">
-                <!-- <button id="dec">-</button> -->
+                <button id="dec"><span class="material-icons">remove</span></button>
                 <input type="number" name="quantity" id="quantity" min="0" placeholder="0" value="1">
-                <!-- <button id="inc">+</button> -->
+                <button id="inc"><span class="material-icons">add</span></button>
               </div>
             </div>
           </div>
@@ -48,9 +52,9 @@
               </div>
               <!-- number input with buttons -->
               <div class="item__count">
-                <!-- <button id="dec">-</button> -->
+                <button id="dec"><span class="material-icons">remove</span></button>
                 <input type="number" name="quantity" id="quantity" min="0" placeholder="0" value="1">
-                <!-- <button id="inc">+</button> -->
+                <button id="inc"><span class="material-icons">add</span></button>
               </div>
             </div>
           </div>
